<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal_200">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:logo="@drawable/healthcare"

            android:background="@color/primaryTextColor">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/answer_the_following_questions_with_yes_or_no"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/have_you_had_a_dry_cough_recently"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
        <RadioGroup
            android:id="@+id/rg_drycough"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_drycough_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_drycough_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/have_you_had_a_fever_recently"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:gravity="center_horizontal" />
        <RadioGroup
            android:id="@+id/rg_fever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_fever_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_fever_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_you_had_fatigue_tiredness_recently"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
        <RadioGroup
            android:id="@+id/rg_fatigue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_fatigue_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_fatigue_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_you_had_a_headache_recently"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <RadioGroup
            android:id="@+id/rg_headache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_headache_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_headache_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_you_had_a_sore_throat_recently"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
        <RadioGroup
            android:id="@+id/rg_sorethroat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_sorethroat_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_sorethroat_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/have_you_had_lose_of_taste_smell_recently"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <RadioGroup
            android:id="@+id/rg_taste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_taste_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_taste_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/have_you_had_body_aches_pains_recently"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <RadioGroup
            android:id="@+id/rg_aches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_aches_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes"/>
            <RadioButton
                android:id="@+id/rb_aches_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/have_you_been_in_contact_with_someone_who_has_covid_19"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
        <RadioGroup
            android:id="@+id/rg_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_contact_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yes"/>
        <RadioButton
            android:id="@+id/rb_contact_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No"/>
        </RadioGroup>


        <Button
            android:id="@+id/submitBTN"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/submit"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"

            />


    </LinearLayout>
</RelativeLayout>